chore(deps): Reduce dependencies in Citrus base module
- Use own String utils for basic operations (e.g. hasText())
- Avoid using Spring CollectionUtils isEmpty()
- Avoid using Spring util.Assert notNull()
- Use Java 9+ String utilities (e.g. String.join(), Stream API with joining() collectors)
- Use own resource implementation for classpath and file system resources
- Reduce amount of dependencies (e.g. Spring) in Citrus modules